--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,102 +1,114 @@
-#{extends 'main.html' /}
-#{set title:'beautify.me - Welcome!' /}
-
-#{set 'moreStyles'}
-    #{stylesheet 'smoothDivScroll.css'/}
-    #{stylesheet 'scroller.css'/}
-#{/set}
+#{extends 'main.html' /} #{set title:'beautify.me - Welcome!' /} #{set
+'moreStyles'} #{stylesheet 'smoothDivScroll.css'/} #{stylesheet
+'scroller.css'/} #{/set}
 
 <div id="media">
-    <video autoplay id="v" style="width:800px; height:700px; display: none"></video>
-    <div id="container"></div>
+	<video autoplay id="v"
+		style="width: 800px; height: 700px; display: none"></video>
+	<div id="container"></div>
 </div>
 
 
 <div id="ads">
+	<button id="go">Take a photo!</button>
+	</p>
+	#{form @savePic(), enctype:'multipart/form-data'} <img type="input"
+		id="imp" name="imp" style="display: none;" /> <input type="hidden"
+		name="thePic" id="thePic" />
+	</p>
+	#{if session.securesocial_user}
+	<button onClick()="javascript: submitform()" id="save"
+		style="display: none;">Save the photo!</button>
+	#{/if}
 
-    <button id="go">Take a photo!</button>
-    <img id="imp" style="display:none;"/>
-    Gender:
-    <a href="@{Application.index}?gender=1">female</a>
-    <a href="@{Application.index}?gender=1">male</a>
-    <a href="@{Application.index}?gender=1">unisex</a>
-
-    Type:
-    <a href="@{Application.index}?type=12">hat</a>
-    <a href="@{Application.index}?type=13">glasses</a>
-    <a href="@{Application.index}?type=2">earrings</a>
+	</p>
+	#{/form} Gender: <a href="@{Application.index}?gender=1">female</a> <a
+		href="@{Application.index}?gender=1">male</a> <a
+		href="@{Application.index}?gender=1">unisex</a> Type: <a
+		href="@{Application.index}?type=12">hat</a> <a
+		href="@{Application.index}?type=13">glasses</a> <a
+		href="@{Application.index}?type=2">earrings</a>
 </div>
 
 
 <div id="items">
-    <div id="makeMeScrollable">
-    #{list items:accessoryList, as:'accessory'}
-        <a href="#"><img height="100" width="100" src="@{AccessoryController.getPic(accessory.id)}"/></a>
-
-    #{/list}
-    </div>
+	<div id="makeMeScrollable">
+		#{list items:accessoryList, as:'accessory'} <a href="#"><img
+			height="100" width="100"
+			src="@{AccessoryController.getPic(accessory.id)}" /></a> #{/list}
+	</div>
 </div>
 
-<script src="@{'/public/javascripts/jquery-ui-1.8.23.custom.min.js'}" type="text/javascript"></script>
-<script src="@{'/public/javascripts/jquery.mousewheel.min.js'}" type="text/javascript"></script>
-<script src="@{'/public/javascripts/jquery.smoothdivscroll-1.3-min.js'}" type="text/javascript"></script>
+<script src="@{'/public/javascripts/jquery-ui-1.8.23.custom.min.js'}"
+	type="text/javascript"></script>
+<script src="@{'/public/javascripts/jquery.mousewheel.min.js'}"
+	type="text/javascript"></script>
+<script src="@{'/public/javascripts/jquery.smoothdivscroll-1.3-min.js'}"
+	type="text/javascript"></script>
 
 
 
 <script src="@{'/public/javascripts/kinetic-v4.5.4.min.js'}"></script>
 <script src="@{'/public/javascripts/main.js'}"></script>
 <script>
-    var stage = new Kinetic.Stage({
-        container: 'container',
-        width: width,
-        height: height
-    });
-    layer = new Kinetic.Layer();
-    stage.add(layer);
-
+	var stage = new Kinetic.Stage({
+		container : 'container',
+		width : width,
+		height : height
+	});
+	layer = new Kinetic.Layer();
+	stage.add(layer);
 </script>
 <script src="@{'/public/javascripts/video-stream.js'}"></script>
 <script src="@{'/public/javascripts/canvas-control.js'}"></script>
 <script defer="defer">
-    $(function () {
-        $("div#makeMeScrollable").smoothDivScroll({});
-        var target = new Kinetic.Image({
-            name: 'video',
-            x: 0,
-            y: 0,
-            width: width,
-            height: height,
-            image: v});
+	$(function() {
+		$("div#makeMeScrollable").smoothDivScroll({});
+		var target = new Kinetic.Image({
+			name : 'video',
+			x : 0,
+			y : 0,
+			width : width,
+			height : height,
+			image : v
+		});
 
-        layer.add(target);
-        v.addEventListener('canplay', function (ev) {
-            setTimeout(setVideo, 1000, v, target);
-        }, false);
+		layer.add(target);
+		v.addEventListener('canplay', function(ev) {
+			setTimeout(setVideo, 1000, v, target);
+		}, false);
 
-        function setVideo(video, target) {
-            try {
-                target.setImage(video);
-                stage.draw();
-                setTimeout(setVideo, 20, video, target);
-            } catch (err) {
-                console.trace();
-                console.log(err);
-            }
-        }
+		function setVideo(video, target) {
+			try {
+				target.setImage(video);
+				stage.draw();
+				setTimeout(setVideo, 20, video, target);
+			} catch (err) {
+				console.trace();
+				console.log(err);
+			}
+		}
 
-        $("#items img").click(function () {
-            loadImage($(this).attr('src'));
-        });
+		$("#items img").click(function() {
+			loadImage($(this).attr('src'));
+		});
 
-        $("#go").click(function () {
+		$("#go").click(function() {
 
-            var canvas = layer.getCanvas().getElement();
-            var dataURL = canvas.toDataURL();
-            document.getElementById('imp').src = dataURL;
+			var canvas = layer.getCanvas().getElement();
+			var dataURL = canvas.toDataURL();
+			document.getElementById('imp').src = dataURL;
+			document.getElementById('thePic').value = dataURL;
+			$("#imp").show();
+			$("#save").show();
 
-            $("#imp").show();
+		});
 
-        });
+	})
 
-    })
+	function submitform() {
+		document.myform.submit();
+	}
+</script>
+
 </script>
