--- a/app/views/Application/mystuff.html
+++ b/app/views/Application/mystuff.html
@@ -39,7 +39,7 @@
       	    #{list items: userpics, as:'pic'}
       	    	<div class="span6">
       	    		<a href="@{Application.shareOnNetwork}?id=&{pic.id}"><img height="15000" width="15000" src="@{Application.getPic(pic.id)}"/></a>
-      	    		${pic.name}
+      	    		<!-- ${pic.name}  -->
       	    	<!-- <input id="pic" type="image" src="@{Application.getPic(pic.id)}" value="${params.picture}"/>  -->
 					<input id="emailbutton" type="image" src="@{'/public/images/mail_envelope.png'}" value="${params.button}"/>
       	    		<input id="facebookbutton" type="image" src="@{'/public/images/facebook.png'}" value="${params.button}"/>
